# Sentiment-Analysis-Twitter

./: .gitignore  CHANGELOG.md  README.md  app.py  config.py  predict.py  pyproject.toml  requirements.txt  sentiment.py  stats.py  train.py
classifiers/: __init__.py  base.py  nltk_models.py  registry.py  sklearn_models.py
data/: training.sample.csv  training.sample.norm.csv  training.tiny.csv  training.tiny.norm.csv
evaluation/: __init__.py  metrics.py
features/: __init__.py  vectorization.py
preprocessing/: __init__.py
sandersfeatures/: tweet_features.py  tweet_pca.py
sanderstwitter02/: __init__.py  install.py
stanfordcorpus/: __init__.py
tests/: test_classifiers.py  test_pipeline.py
utils/: __init__.py  logging_setup.py
