[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis-twitter"
version = "2.0.0"
description = "Classical NLTK/scikit-learn Twitter sentiment analysis: multi-model comparison and an interactive Streamlit dashboard"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
